add second and third block

--- a/index.html
+++ b/index.html
@@ -43,6 +43,70 @@
             </div>
         </section>
     <!-- end banner -->
+    <!-- start icons -->
+        <section class="icons">
+            <div class="container">
+                <ul class="icons_all">
+                    <li class="icons_item">
+                        <img src="images/icon1.png" alt="get inspired">
+                        <p class="title">Get Inspired</p>
+                        <img class="icon_line" src="images/line.png" alt="line">
+                        <p class="paragraph">Lorem ipsum dolor sit amet, consectetur adipisc Pellentesque vel enim a elit viverra elementuma. Aliquam erat voputpat.</p>
+                    </li>
+                    <li class="icons_item">
+                        <img src="images/icon2.png" alt="get rewarded">
+                        <p class="title">Get Rewarded</p>
+                        <img class="icon_line" src="images/line.png" alt="line">
+                        <p class="paragraph">Lorem ipsum dolor sit amet, consectetur adipisc Pellentesque vel enim a elit viverra elementuma. Aliquam erat voputpat.</p>
+                    </li>
+                    <li class="icons_item">
+                        <img src="images/icon3.png" alt="get social">
+                        <p class="title">Get Social</p>
+                        <img class="icon_line" src="images/line.png" alt="line">
+                        <p class="paragraph">Lorem ipsum dolor sit amet, consectetur adipisc Pellentesque vel enim a elit viverra elementuma. Aliquam erat voputpat.</p>
+                    </li>
+                </ul>
+            </div>
+        </section>
+    <!-- end icons -->
+    <!-- start intro -->
+    <section class="intro">
+        <div class="container">
+            <ul class="intro_main">
+                <li class="intro_iphone">
+                    <img src="images/iphone.png" alt="iphone">
+                </li>
+                <li class="paragraph_main">
+                    <p class="title" >introducing the fudi app</p>
+                    <img class="icon_line" src="images/line.png" alt="line">
+                    <p class="paragraph2">
+                        Morbi eget posuere dolor. Pellentesque cursus aliquet aliquet. Aeneanet 
+                        felis sit amet diam mollis ullamcorper. Nullam consequat sem a ante vest
+                        ibulum tristique. Suspendisse tristique lacus ac mattis porta.</p>
+                    <p class="paragraph2"> 
+                        Vivamus ligula quam, vehicula non lacinia sed, faucibus sit amet libero. In 
+                        libero dui, eleifend eu nisi id, egestas fringilla odio. In varius quam a mas
+                        sa hendrerit ullamcorper a eu justo. Suspendisse porta mattis convallis. 
+                        Aenean tempus ligula ac odio rhoncus, quis aliquam dolor accumsan.</p> 
+                    <p class="paragraph2">  
+                        Suspendisse aliquet felis consectetur libero congue, sed pulvinar diam 
+                        malesuada. Duis vehicula a nibh id hendrerit. Donec sit amet ultrices 
+                        ante, a mattis massa.</p>
+                    <ul class="paragraph_additional">
+                        <li class="app">
+                            <a href="https://www.apple.com/ru/ios/app-store/" target="blank"><img src="images/app_store.png" alt="app_store"></a> 
+                        </li>
+                        <li class="app">
+                            <a href="https://play.google.com" target="blank"><img src="images/google_play.png" alt="google_play"> </a>
+                        </li>
+                    </ul>
+                </li>
+                <!--
+                
+            </ul>
+        </div>
+    </section>
+    <!-- end intro -->
     </main>
 </body>
 </html>
