add feedback and menu blocks

--- a/index.html
+++ b/index.html
@@ -101,12 +101,75 @@
                         </li>
                     </ul>
                 </li>
-                <!--
-                
             </ul>
         </div>
     </section>
     <!-- end intro -->
+    <!-- start feedback -->
+    <section class="feedback_all">
+        <div class="container">
+            <img class="face" src="images/man.png" alt="face">
+            <p class="testimonial">“I am so happy because I found this recipe, and it just made my life easier.</br>
+                Thanks  so much for sharing!”</p>
+            <p class="feedback_person">- Michael Dawson, San Francisco, CA -</p>
+            <img class="image_button" src="images/ellipse 1.png" alt="buttom1">
+            <img class="image_button" src="images/ellipse 2.png" alt="buttom2">
+            <img class="image_button" src="images/ellipse 2.png" alt="buttom3">
+        </div>
+    </section>
+    <!-- end feedback -->
+    <!-- star menu -->
+    <section class="menu_all">
+        <div class="container_menu">
+            <p class="title" >browse by cuisines</p>
+            <img class="icon_line" src="images/line.png" alt="line">
+            <div class="menu-list">
+                <ul class="menu-list-all">
+                    <li class="menu-list-item_1 all">
+                        <p class="number">327 Recipes</p>
+                        <p class="name">italian</p>
+                    </li>
+                    <li class="menu-list-item_2 all">
+                        <p class="number">856 Recipes</p>
+                        <p class="name">indian</p>
+                    </li>
+                    <li class="menu-list-item_3 all">
+                        <p class="number">27 Recipe</p>
+                        <p class="name">french</p>
+                    </li>
+                    <li class="menu-list-item_4 all">
+                        <p class="number">174 Recipes</p>
+                        <p class="name">steakhouse</p>
+                    </li>
+                    <li class="menu-list-item_5 all">
+                        <p class="number">731 Recipes</p>
+                        <p class="name">seafood</p>
+                    </li>
+                    <li class="menu-list-item_6 all">
+                        <p class="number">237 Recipes</p>
+                        <p class="name">sushi</p>
+                    </li>
+                    <li class="menu-list-item_7 all">
+                        <p class="number">529 Recipes</p>
+                        <p class="name">mexican</p>
+                    </li>
+                    <li class="menu-list-item_8 all">
+                        <p class="number">145 Recipes</p>
+                        <p class="name">chinese</p>
+                    </li>
+                    <li class="menu-list-item_9 all">
+                        <p class="number">327 Recipes</p>
+                        <p class="name">pizza</p>
+                    </li>
+                    <li class="menu-list-item_10 all">
+                        <p class="number">1.437 Recipes</p>
+                        <p class="name">american</p>
+                    </li> 
+                </ul>
+            </div>
+        </div>
+    </section>
+    <!-- end menu -->
     </main>
 </body>
 </html>
