made last changes

--- a/index.html
+++ b/index.html
@@ -168,8 +168,42 @@
                 </ul>
             </div>
         </div>
+        <div class="container">
+            <ul class="information">
+                <li class="data-information">
+                    <p class="data-number">23,567</p>
+                    <p class="data-text">Recipes Available</p>
+                </li>
+                <li class="data-information">
+                    <p class="data-number">431,729</p>
+                    <p class="data-text">Active Users</p>
+                </li>
+                <li class="data-information">
+                    <p class="data-number">892,173</p>
+                    <p class="data-text">Positive Reviews</p>
+                </li>
+                <li class="data-information">
+                    <p class="data-number">56,581</p>
+                    <p class="data-text">Photos & Videos</p>
+                </li>
+                <li class="data-information">
+                    <p class="data-number">3,182</p>
+                    <p class="data-text">Spices and Herbs</p>
+                </li>
+            </ul>
+        </div>
     </section>
     <!-- end menu -->
     </main>
+    <!-- start footer -->
+    <footer class="footer">
+        <div class="container">
+            <div class="ba-footer">
+                <p class="left-text">©2014 Fudi. All Rights Reserved.</p>
+                <p class="right-text" >DESIGN BY: <a class="footer_link" href="https://www.bekades.com" target="blank">WWW.BEKADES.COM</a></p>
+            </div>
+        </div>
+    </footer> 
+    <!-- end footer -->
 </body>
 </html>
